RESOLVED FIXED124013
Don't repaint the view when the web process crashes
https://bugs.webkit.org/show_bug.cgi?id=124013
Summary Don't repaint the view when the web process crashes
Anders Carlsson
Reported 2013-11-07 13:44:12 PST
Don't repaint the view when the web process crashes
Attachments
Patch (2.63 KB, patch)
2013-11-07 13:45 PST, Anders Carlsson
mitz: review+
Anders Carlsson
Comment 1 2013-11-07 13:45:28 PST
Anders Carlsson
Comment 2 2013-11-07 13:52:57 PST
Note You need to log in before you can comment on or make changes to this bug.