Don't repaint the view when the web process crashes https://bugs.webkit.org/show_bug.cgi?id=124013

Reviewed by Dan Bernstein.

It's up to each individual port to decide whether the view should be repainted when the web process crashes.

* UIProcess/API/mac/PageClientImpl.mm:
(WebKit::PageClientImpl::setViewNeedsDisplay):
(WebKit::PageClientImpl::displayView):
* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::resetStateAfterProcessExited):

Canonical link: https://commits.webkit.org/142184@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158872 268f45cc-cd09-0410-ab3c-d52691b4dbfc