Source/WebKit2/UIProcess/WebPageProxy.cpp
@@ -3796,12 +3796,6 @@ void WebPageProxy::resetStateAfterProcessExited()
     m_pageClient->clearAllEditCommands();
     m_pendingLearnOrIgnoreWordMessageCount = 0;
 
-    // If the call out to the loader client didn't cause the web process to be relaunched,
-    // we'll call setNeedsDisplay on the view so that we won't have the old contents showing.
-    // If the call did cause the web process to be relaunched, we'll keep the old page contents showing
-    // until the new web process has painted its contents.
-    setViewNeedsDisplay(IntRect(IntPoint(), viewSize()));
-
     // Can't expect DidReceiveEvent notifications from a crashed web process.
     m_keyEventQueue.clear();
     m_wheelEventQueue.clear();
